--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,7 @@
                     </div>
                     <i class="ri-arrow-right-line"></i>
                 </div>
-                <div class="elem">
+                <div class="elem1">
                    <div id="img2" class="elem-img">
                    
                    </div>
