--- a/index2.html
+++ b/index2.html
@@ -48,6 +48,7 @@
                     </div>
                     <i class="ri-arrow-right-line"></i>
                 </div>
+                </div> 
                 <div class="elem">
                    <div id="img2" class="elem-img">
                    
